# octorad

./: 04-thread_test.cu  CMakeLists.txt  README.md  configure.bat  configure.sh  cuda-gpuinfo.h
playground/: 01-heat-conduction-solution.cu  01-heat-conduction.cu  02-hi.cu  03-multistream.cu  05-bank_conflict_demo.cu  05-device_info.cu  05-dynamic_shared_mem.cu  06-matmul.cu  07-callback.cu  08-thrust_batch_cp.cu  08-thrust_dem.cu  CMakeLists.txt  prog.cpp
radiation/: CMakeLists.txt  config.cpp  config.hpp  fidelity_test.cpp  fx_case.cpp  fx_case.hpp  fx_compare.cpp  kernel_cpu.cpp  kernel_cpu.hpp  kernel_gpu.cu  kernel_gpu.hpp  kernel_v2.cpp  kernel_v2.hpp  main.cpp  profile_test.cpp  scoped_timer.hpp  util.cpp  util.hpp
radiation/kernels/: helpers.hpp  kernel_cpu.cpp  kernel_cpu.hpp  kernel_gpu.cu  kernel_gpu.hpp  kernel_v2.cpp  kernel_v2.hpp
radiation/tests/: arg_array_sizes_test.cpp  compare_test.cpp  fidelity_83_test.cu  fidelity_test.cpp  profile_83_test.cpp  profile_many_test.cpp  profile_test.cpp  run_83_test.cu  single_case_test.cu
radiation/utils/: fx_case.cpp  fx_case.hpp  fx_compare.cpp  fx_compare.hpp  scoped_timer.hpp  util.hpp
scratchpad/: scratchpad-01.cu  scratchpad-02.cu  scratchpad-03.cu  scratchpad-04.cu
